Added alpha slider + bug fixes