@@ -1,7 +1,6 @@
 package org.bunnys.ui;
 
 import org.bunnys.audio.device.AudioDeviceManager;
-import org.bunnys.audio.processing.AudioProcessor;
 import org.bunnys.audio.processing.LowPassFilter;
 import org.bunnys.constants.AudioConstants;
 import org.bunnys.audio.AudioHandler;
@@ -27,6 +26,11 @@ public class MainWindow {
 
     private boolean isCleanedUp = false;
 
+    // LPF stuff
+    private JSlider alphaSlider;
+    private JLabel alphaLabel;
+    private LowPassFilter lpf;
+
     public MainWindow(AudioFormat format, AudioDeviceManager deviceManager, int sampleSize) {
         this.frame = createMainFrame();
         this.waveformChart = new WaveformChart(sampleSize);
@@ -39,15 +43,15 @@ public class MainWindow {
 
         initializeUI();
         setupDeviceSelector(deviceManager);
+        setupLPFControls();
         setupButtons();
 
         // Start with first available device
         List<Mixer.Info> devices = deviceManager.getInputDevices();
         if (!devices.isEmpty()) {
-            audioHandler.startCapture(devices.get(0));
+            audioHandler.startCapture(devices.getFirst());
         }
 
-        // Add window listener to handle closing
         frame.setDefaultCloseOperation(JFrame.DO_NOTHING_ON_CLOSE);
         frame.addWindowListener(new java.awt.event.WindowAdapter() {
             @Override
@@ -63,7 +67,6 @@ public class MainWindow {
         frame.setSize(AudioConstants.DEFAULT_WINDOW_WIDTH, AudioConstants.DEFAULT_WINDOW_HEIGHT);
         frame.setLocationRelativeTo(null);
 
-        // Set application icon
         setApplicationIcon(frame);
 
         return frame;
@@ -73,15 +76,13 @@ public class MainWindow {
         ImageIcon icon = new ImageIcon(Objects.requireNonNull(
                 getClass().getClassLoader().getResource("icon.png")));
 
-        if (icon.getImage() != null) {
+        if (icon.getImage() != null)
             frame.setIconImage(icon.getImage());
-        } else {
+         else
             LOGGER.warning("Icon not found: Make sure icon.png is in the resources folder.");
-        }
     }
 
     private void initializeUI() {
-        // Add chart panel
         ChartPanel chartPanel = waveformChart.createChartPanel();
         frame.add(chartPanel, BorderLayout.CENTER);
 
@@ -102,14 +103,37 @@ public class MainWindow {
         deviceList.addActionListener(e -> {
             int selectedIndex = deviceList.getSelectedIndex();
 
-            if (selectedIndex >= 0) {
+            if (selectedIndex >= 0)
                 audioHandler.startCapture(inputDevices.get(selectedIndex));
-            }
         });
 
         topPanel.add(label);
         topPanel.add(deviceList);
         frame.add(topPanel, BorderLayout.NORTH);
+    }
+
+    // LPF Logic
+
+    private void setupLPFControls() {
+        JPanel lpfPanel = new JPanel(new FlowLayout());
+        lpfPanel.setBorder(BorderFactory.createTitledBorder("LPF Controls"));
+
+        // Slider for alpha adjustment (0% to 100%)
+        // For later, to prevent freezing alpha will be set to 0.01 even if the user wants 0
+        alphaSlider = new JSlider(0, 100, 10); // Min 0, Max 100, Default 10 (0.1f)
+        alphaLabel = new JLabel("Alpha: 0.10");
+
+        alphaSlider.addChangeListener(e -> {
+            float alphaValue = alphaSlider.getValue() / 100.0f;
+            alphaLabel.setText(String.format("Alpha: %.2f", alphaValue));
+            if (lpf != null) {
+                lpf.setAlpha(alphaValue); // Update LPF dynamically
+            }
+        });
+
+        lpfPanel.add(alphaLabel);
+        lpfPanel.add(alphaSlider);
+        frame.add(lpfPanel, BorderLayout.EAST); // Add to UI
     }
 
     private void setupButtons() {
@@ -129,17 +153,39 @@ public class MainWindow {
         stopButton.setEnabled(false);
 
         // LPF button
-        AudioProcessor lpf = new LowPassFilter(0.1f);
+     //   final AudioProcessor[] lpf = {new LowPassFilter(0.1f)};
+        // Testing out custom alpha values, 0.1 => aggressive filtering, 0.9 less filtering (gentle smoothing)
+//        lpfButton.addActionListener(e -> {
+//            // Toggle LPF
+//            if (lpfButton.getText().equals("Apply LPF")) {
+//                audioHandler.applyAudioProcessor(lpf[0]);
+//                lpfButton.setText("Disable LPF");
+//            } else {
+//                audioHandler.removeAudioProcessor();
+//                lpfButton.setText("Apply LPF");
+//            }
+//        });
+
         lpfButton.addActionListener(e -> {
-            // Toggle LPF
             if (lpfButton.getText().equals("Apply LPF")) {
+                float alpha = alphaSlider.getValue() / 100.0f;
+                // To prevent freezing, to read more about freezing its under the listener
+                alpha = (float) Math.max(alpha, 0.01);
+                lpf = new LowPassFilter(alpha);
                 audioHandler.applyAudioProcessor(lpf);
-                lpfButton.setText("Disable LPF");
+                lpfButton.setText("Disable LFP");
             } else {
                 audioHandler.removeAudioProcessor();
                 lpfButton.setText("Apply LPF");
             }
         });
+
+        /* What is freezing
+         * LPF formula is filtered[i] = alpha * input[i] + (1 - alpha) * filtered[i-1]
+         * so when alpha = 0, it becomes filtered[i-1], so every output is the same as the prev. one
+         * this is mathematically correct as far as I know but this is not useful for real-time processing
+         * in the real world, alpha should never be 0, as it would be unusable as you can see
+         * */
 
         buttonPanel.add(recordButton);
         buttonPanel.add(stopButton);
@@ -153,11 +199,6 @@ public class MainWindow {
         recordButton.setText(isRecording ? "Recording..." : "Record");
         recordButton.setEnabled(!isRecording);
         stopButton.setEnabled(isRecording);
-    }
-
-    public void dispose() {
-        audioHandler.close();
-        frame.dispose();
     }
 
     public void cleanupAndExit() {
